- latest sources from CVS (newbie issues with GIT).