@@ -1,6 +1,6 @@
 /*
  *  JComponentActionSetCustomForeground, action for setting a custom foreground color of a JComponent.
- *  Copyright (C) Achim Westermann, created on 10.12.2004, 13:48:55
+ *  Copyright (C) 2004 - 2011 by Achim Westermann, created on 10.12.2004, 13:48:55
  *
  *  This library is free software; you can redistribute it and/or
  *  modify it under the terms of the GNU Lesser General Public
@@ -23,7 +23,7 @@
 package info.monitorenter.gui.chart.events;
 
 import info.monitorenter.gui.chart.Chart2D;
-import info.monitorenter.gui.chart.layout.LayoutFactory.PropertyChangeCheckBoxMenuItem;
+import info.monitorenter.gui.chart.controls.LayoutFactory.PropertyChangeCheckBoxMenuItem;
 
 import java.awt.Color;
 import java.awt.event.ActionEvent;
@@ -40,7 +40,7 @@ import javax.swing.JComponent;
  * 
  * @author <a href="mailto:Achim.Westermann@gmx.de">Achim Westermann </a>
  * 
- * @version $Revision: 1.2 $
+ * @version $Revision: 1.8 $
  */
 public final class JComponentActionSetCustomForeground extends AJComponentAction {
 
@@ -50,10 +50,10 @@ public final class JComponentActionSetCustomForeground extends AJComponentAction
   private static final long serialVersionUID = 3904680491952451890L;
 
   /**
-   * Reference to the last custom color chosen to check wether the corresponding
+   * Reference to the last custom color chosen to check whether the corresponding
    * menu is selected.
    */
-  private Color m_lastChosenColor;
+  private Color m_lastChosenColor = null;
 
   /**
    * Create an <code>Action</code> that accesses the trace and identifies
@@ -61,13 +61,13 @@ public final class JComponentActionSetCustomForeground extends AJComponentAction
    * <p>
    * 
    * @param component
-   *          the target the action will work on.
+   *            the target the action will work on.
    * 
    * @param description
-   *          the descriptive <code>String</code> that will be displayed by
-   *          {@link javax.swing.AbstractButton} subclasses that get this
-   *          <code>Action</code> assigned (
-   *          {@link javax.swing.AbstractButton#setAction(javax.swing.Action)}).
+   *            the descriptive <code>String</code> that will be displayed by
+   *            {@link javax.swing.AbstractButton} subclasses that get this
+   *            <code>Action</code> assigned (
+   *            {@link javax.swing.AbstractButton#setAction(javax.swing.Action)}).
    */
   public JComponentActionSetCustomForeground(final JComponent component, final String description) {
     super(component, description);
@@ -81,6 +81,7 @@ public final class JComponentActionSetCustomForeground extends AJComponentAction
     Color chosen = JColorChooser.showDialog(this.m_component, "choose foreground color for "
         + this.m_component.getName(), this.m_component.getForeground());
     this.m_component.setForeground(chosen);
+    this.m_lastChosenColor = chosen;
   }
 
   /**
@@ -90,13 +91,13 @@ public final class JComponentActionSetCustomForeground extends AJComponentAction
     String property = evt.getPropertyName();
     if (property.equals(Chart2D.PROPERTY_FOREGROUND_COLOR)) {
       Color newColor = (Color) evt.getNewValue();
-      if (newColor.equals(this.m_lastChosenColor)) {
-        this.firePropertyChange(PropertyChangeCheckBoxMenuItem.PROPERTY_SELECTED,
-            new Boolean(false), new Boolean(true));
+      if ((this.m_lastChosenColor != null) && (newColor.equals(this.m_lastChosenColor))) {
+        this.firePropertyChange(PropertyChangeCheckBoxMenuItem.PROPERTY_SELECTED, Boolean
+            .valueOf(false), Boolean.valueOf(true));
 
       } else {
-        this.firePropertyChange(PropertyChangeCheckBoxMenuItem.PROPERTY_SELECTED,
-            new Boolean(true), new Boolean(false));
+        this.firePropertyChange(PropertyChangeCheckBoxMenuItem.PROPERTY_SELECTED, Boolean
+            .valueOf(true), Boolean.valueOf(false));
       }
     }
   }
