@@ -1,6 +1,7 @@
 /*
- *  TestRingBufferArrayFast.java of project jchart2d, <purpose>
- *  Copyright 2006 (C) Achim Westermann, created on 06:29:12.
+ *  TestRingBufferArrayFast.java of project jchart2d, Junit 
+ *  test for class RingBufferArrayFast. 
+ *  Copyright (c) 2007 Achim Westermann, created on 06:29:12.
  *
  *  This library is free software; you can redistribute it and/or
  *  modify it under the terms of the GNU Lesser General Public
@@ -23,30 +24,263 @@ package info.monitorenter.util.collections;
 
 import java.util.Iterator;
 
+import junit.framework.Assert;
+import junit.framework.Test;
 import junit.framework.TestCase;
+import junit.framework.TestSuite;
 
 /**
- * 
  * Testcase for {@link info.monitorenter.util.collections.RingBufferArrayFast}.
  * <p>
  * 
  * @author <a href="mailto:Achim.Westermann@gmx.de">Achim Westermann</a>
- * 
- * 
- * @version $Revision: 1.1 $
+ * @version $Revision: 1.10 $
  */
-public class TestRingBufferArrayFast extends TestCase {
+public class TestRingBufferArrayFast
+    extends TestCase {
 
   /**
-   * Test method for {@link info.monitorenter.util.collections.RingBufferArrayFast.add(Object)}.
+   * Test suite for this test class.
+   * <p>
+   * 
+   * @return the test suite
+   */
+  public static Test suite() {
+
+    TestSuite suite = new TestSuite();
+    suite.setName(TestRingBufferArrayFast.class.getName());
+
+    suite.addTest(new TestRingBufferArrayFast("testAdd"));
+    suite.addTest(new TestRingBufferArrayFast("testIteratorF2L"));
+    suite.addTest(new TestRingBufferArrayFast("testIteratorL2F"));
+    suite.addTest(new TestRingBufferArrayFast("testSetBufferSize"));
+    suite.addTest(new TestRingBufferArrayFast("testSize"));
+
+    return suite;
+  }
+
+  /**
+   * Creates a test case with the given name.
+   * <p>
+   * 
+   * @param testName
+   *            the name of the test case.
+   */
+  public TestRingBufferArrayFast(final String testName) {
+    super(testName);
+  }
+
+  /**
+   * Test method for {@link info.monitorenter.util.collections.RingBufferArrayFast#add(Object)}.
    * <p>
    */
   public void testAdd() {
-    RingBufferArrayFast ringBuffer = new RingBufferArrayFast(1);
+    RingBufferArrayFast<Integer> ringBuffer = new RingBufferArrayFast<Integer>(1);
     System.out.println("Adding 1 element to a buffer of size 1.");
     ringBuffer.add(new Integer(0));
-    assertEquals(1, ringBuffer.size());
+    Assert.assertEquals(1, ringBuffer.size());
 
+  }
+
+  /**
+   * Test method for {@link info.monitorenter.util.collections.RingBufferArrayFast#iteratorF2L()}.
+   * <p>
+   */
+  public void testIteratorF2L() {
+    IRingBuffer<Integer> ringBuffer = new RingBufferArrayFast<Integer>(10);
+    System.out.println("Adding 2 elements to a buffer of size 10");
+    for (int i = 0; i < 2; i++) {
+      ringBuffer.add(Integer.valueOf(i));
+    }
+    Assert.assertEquals(2, ringBuffer.size());
+    int value = 1;
+    Iterator<Integer> it = ringBuffer.iteratorF2L();
+    Integer removed;
+    while (it.hasNext()) {
+      removed = it.next();
+      Assert.assertNotNull("Element no. " + value + " is null.", removed);
+      // tests the order of the iterator:
+      Assert.assertEquals(removed.intValue(), value);
+      value--;
+    }
+
+    ringBuffer.clear();
+    Assert.assertEquals(0, ringBuffer.size());
+    value = 0;
+    System.out.println("Adding 1 element to a buffer of size 10");
+    for (int i = 0; i < 1; i++) {
+      ringBuffer.add(Integer.valueOf(i));
+    }
+    Assert.assertEquals(1, ringBuffer.size());
+    it = ringBuffer.iteratorF2L();
+    while (it.hasNext()) {
+      removed = it.next();
+      Assert.assertNotNull("Element no. " + value + " is null.", removed);
+      // tests the order of the iterator:
+      Assert.assertEquals(removed.intValue(), value);
+      value--;
+    }
+
+    ringBuffer.clear();
+    Assert.assertEquals(0, ringBuffer.size());
+    value = 9;
+    System.out.println("Adding 10 elements to a buffer of size 10");
+    for (int i = 0; i < 10; i++) {
+      ringBuffer.add(Integer.valueOf(i));
+    }
+    Assert.assertEquals(10, ringBuffer.size());
+    it = ringBuffer.iteratorF2L();
+    while (it.hasNext()) {
+      removed = it.next();
+
+      Assert.assertNotNull("Element no. " + value + " is null.", removed);
+      // tests the order of the iterator:
+      Assert.assertEquals(removed.intValue(), value);
+      value--;
+    }
+
+    ringBuffer.clear();
+    Assert.assertEquals(0, ringBuffer.size());
+    value = 11;
+    System.out.println("Adding 12 elements to a buffer of size 10");
+    for (int i = 0; i < 12; i++) {
+      ringBuffer.add(Integer.valueOf(i));
+    }
+    Assert.assertEquals(10, ringBuffer.size());
+    it = ringBuffer.iteratorF2L();
+    while (it.hasNext()) {
+      removed = it.next();
+
+      Assert.assertNotNull("Element no. " + value + " is null.", removed);
+      // tests the order of the iterator:
+      Assert.assertEquals(removed.intValue(), value);
+      value--;
+    }
+
+    System.out.println("Testing for side effects of hasNext()...");
+    it = ringBuffer.iteratorF2L();
+    for (int i = 0; i < 100; i++) {
+      Assert.assertTrue(it.hasNext());
+    }
+
+    System.out.println("Testing hasNext() with iterator f2l on empty buffer...");
+    ringBuffer.clear();
+    Assert.assertEquals(0, ringBuffer.size());
+    Assert.assertTrue(ringBuffer.isEmpty());
+    it = ringBuffer.iteratorF2L();
+    Assert.assertFalse(it.hasNext());
+
+    System.out.println("Testing hasNext() with iterator l2f on empty buffer...");
+    ringBuffer.clear();
+    Assert.assertEquals(0, ringBuffer.size());
+    Assert.assertTrue(ringBuffer.isEmpty());
+    it = ringBuffer.iteratorL2F();
+    Assert.assertFalse(it.hasNext());
+  }
+
+  /**
+   * Test method for {@link info.monitorenter.util.collections.RingBufferArrayFast#iteratorL2F()}.
+   * <p>
+   */
+  public void testIteratorL2F() {
+    IRingBuffer<Integer> ringBuffer = new RingBufferArrayFast<Integer>(10);
+    System.out.println("Adding 2 elements to a buffer of size 10");
+    for (int i = 0; i < 2; i++) {
+      ringBuffer.add(Integer.valueOf(i));
+    }
+    Assert.assertEquals(2, ringBuffer.size());
+    int value = 0;
+    for (Integer removed : ringBuffer) {
+      Assert.assertNotNull("Element no. " + value + " is null.", removed);
+      // tests the order of the iterator:
+      Assert.assertEquals(removed.intValue(), value);
+      value++;
+    }
+
+    ringBuffer.clear();
+    Assert.assertEquals(0, ringBuffer.size());
+    value = 0;
+    System.out.println("Adding 1 element to a buffer of size 10");
+    for (int i = 0; i < 1; i++) {
+      ringBuffer.add(Integer.valueOf(i));
+    }
+    Assert.assertEquals(1, ringBuffer.size());
+    for (Integer removed : ringBuffer) {
+      Assert.assertNotNull("Element no. " + value + " is null.", removed);
+      // tests the order of the iterator:
+      Assert.assertEquals(removed.intValue(), value);
+      value++;
+    }
+
+    ringBuffer.clear();
+    Assert.assertEquals(0, ringBuffer.size());
+    value = 0;
+    System.out.println("Adding 10 elements to a buffer of size 10");
+    for (int i = 0; i < 10; i++) {
+      ringBuffer.add(Integer.valueOf(i));
+    }
+    Assert.assertEquals(10, ringBuffer.size());
+    for (Integer removed : ringBuffer) {
+      Assert.assertNotNull("Element no. " + value + " is null.", removed);
+      // tests the order of the iterator:
+      Assert.assertEquals(removed.intValue(), value);
+      value++;
+    }
+
+    ringBuffer.clear();
+    Assert.assertEquals(0, ringBuffer.size());
+    value = 2;
+    System.out.println("Adding 12 elements to a buffer of size 10");
+    for (int i = 0; i < 12; i++) {
+      ringBuffer.add(Integer.valueOf(i));
+    }
+    Assert.assertEquals(10, ringBuffer.size());
+    for (Integer removed : ringBuffer) {
+      Assert.assertNotNull("Element no. " + value + " is null.", removed);
+      // tests the order of the iterator:
+      Assert.assertEquals(value, removed.intValue());
+      value++;
+    }
+
+    System.out.println("Testing for side effects of hasNext()...");
+    Iterator<Integer> it = ringBuffer.iteratorL2F();
+    for (int i = 0; i < 100; i++) {
+      Assert.assertTrue(it.hasNext());
+    }
+
+    System.out.println("Testing hasNext() with iterator on empty buffer...");
+    ringBuffer.clear();
+    Assert.assertEquals(0, ringBuffer.size());
+    Assert.assertTrue(ringBuffer.isEmpty());
+    it = ringBuffer.iteratorL2F();
+    Assert.assertFalse(it.hasNext());
+  }
+
+  /**
+   * Test method for
+   * {@link info.monitorenter.util.collections.RingBufferArrayFast#setBufferSize(int)}.
+   * <p>
+   */
+  public void testSetBufferSize() {
+    IRingBuffer<Integer> buffer = new RingBufferArrayFast<Integer>(3);
+    Assert.assertEquals(3, buffer.getBufferSize());
+    for (int i = 0; i < 3; i++) {
+      buffer.add(Integer.valueOf(i));
+    }
+    Assert.assertEquals(3, buffer.size());
+    System.out.println("before setting size from 3 to 4: " + buffer.toString());
+    buffer.setBufferSize(4);
+    System.out.println("after setting size from 3 to 4: " + buffer.toString());
+    Assert.assertEquals(3, buffer.size());
+    Assert.assertEquals(4, buffer.getBufferSize());
+
+    buffer.setBufferSize(2);
+    Assert.assertEquals(2, buffer.size());
+    Assert.assertEquals(2, buffer.getBufferSize());
+    Iterator<Integer> it = buffer.iteratorL2F();
+    Assert.assertEquals(1, it.next().intValue());
+    Assert.assertEquals(2, it.next().intValue());
+    Assert.assertFalse(it.hasNext());
   }
 
   /**
@@ -55,234 +289,19 @@ public class TestRingBufferArrayFast extends TestCase {
    */
   public void testSize() {
 
-    RingBufferArrayFast ringBuffer = new RingBufferArrayFast(100);
+    RingBufferArrayFast<Integer> ringBuffer = new RingBufferArrayFast<Integer>(100);
     System.out
         .println("Adding 100 elements to a buffer with capacity of 100 with size assertions.");
     for (int i = 0; i < 100; i++) {
-      assertEquals(i, ringBuffer.size());
-      ringBuffer.add(new Integer(i));
+      Assert.assertEquals(i, ringBuffer.size());
+      ringBuffer.add(Integer.valueOf(i));
     }
     System.out
         .println("Adding 10 elements to a full buffer with capacity of 100 with size assertions.");
     for (int i = 0; i < 10; i++) {
-      ringBuffer.add(new Integer(i));
-      assertEquals(100, ringBuffer.size());
+      ringBuffer.add(Integer.valueOf(i));
+      Assert.assertEquals(100, ringBuffer.size());
     }
-
-  }
-
-  /**
-   * Test method for
-   * {@link info.monitorenter.util.collections.RingBufferArrayFast#iteratorL2F()}.
-   * <p>
-   */
-  public void testIteratorL2F() {
-    IRingBuffer ringBuffer = new RingBufferArrayFast(10);
-    System.out.println("Adding 2 elements to a buffer of size 10");
-    for (int i = 0; i < 2; i++) {
-      ringBuffer.add(new Integer(i));
-    }
-    assertEquals(2, ringBuffer.size());
-    Iterator it = ringBuffer.iteratorL2F();
-    assertTrue(it.hasNext());
-    int value = 0;
-    Integer removed;
-    while (it.hasNext()) {
-      removed = (Integer) it.next();
-      assertNotNull("Element no. " + value + " is null.", removed);
-      // tests the order of the iterator:
-      assertEquals(removed.intValue(), value);
-      value++;
-    }
-
-    ringBuffer.clear();
-    assertEquals(0, ringBuffer.size());
-    value = 0;
-    System.out.println("Adding 1 element to a buffer of size 10");
-    for (int i = 0; i < 1; i++) {
-      ringBuffer.add(new Integer(i));
-    }
-    assertEquals(1, ringBuffer.size());
-    it = ringBuffer.iteratorL2F();
-    assertTrue(it.hasNext());
-    while (it.hasNext()) {
-      removed = (Integer) it.next();
-      assertNotNull("Element no. " + value + " is null.", removed);
-      // tests the order of the iterator:
-      assertEquals(removed.intValue(), value);
-      value++;
-    }
-
-    ringBuffer.clear();
-    assertEquals(0, ringBuffer.size());
-    value = 0;
-    System.out.println("Adding 10 elements to a buffer of size 10");
-    for (int i = 0; i < 10; i++) {
-      ringBuffer.add(new Integer(i));
-    }
-    assertEquals(10, ringBuffer.size());
-    it = ringBuffer.iteratorL2F();
-    while (it.hasNext()) {
-      removed = (Integer) it.next();
-      assertNotNull("Element no. " + value + " is null.", removed);
-      // tests the order of the iterator:
-      assertEquals(removed.intValue(), value);
-      value++;
-    }
-
-    ringBuffer.clear();
-    assertEquals(0, ringBuffer.size());
-    value = 2;
-    System.out.println("Adding 12 elements to a buffer of size 10");
-    for (int i = 0; i < 12; i++) {
-      ringBuffer.add(new Integer(i));
-    }
-    assertEquals(10, ringBuffer.size());
-    it = ringBuffer.iteratorL2F();
-    assertTrue(it.hasNext());
-    while (it.hasNext()) {
-      removed = (Integer) it.next();
-      assertNotNull("Element no. " + value + " is null.", removed);
-      // tests the order of the iterator:
-      assertEquals(value, removed.intValue());
-      value++;
-    }
-
-    System.out.println("Testing for side effects of hasNext()...");
-    it = ringBuffer.iteratorL2F();
-    for (int i = 0; i < 100; i++) {
-      assertTrue(it.hasNext());
-    }
-
-    System.out.println("Testing hasNext() with iterator on empty buffer...");
-    ringBuffer.clear();
-    assertEquals(0, ringBuffer.size());
-    assertTrue(ringBuffer.isEmpty());
-    it = ringBuffer.iteratorL2F();
-    assertFalse(it.hasNext());
-  }
-
-  /**
-   * Test method for
-   * {@link info.monitorenter.util.collections.RingBufferArrayFast#iteratorF2L()}.
-   * <p>
-   */
-  public void testIteratorF2L() {
-    IRingBuffer ringBuffer = new RingBufferArrayFast(10);
-    System.out.println("Adding 2 elements to a buffer of size 10");
-    for (int i = 0; i < 2; i++) {
-      ringBuffer.add(new Integer(i));
-    }
-    assertEquals(2, ringBuffer.size());
-    Iterator it = ringBuffer.iteratorF2L();
-    int value = 1;
-    Integer removed;
-    while (it.hasNext()) {
-      removed = (Integer) it.next();
-      assertNotNull("Element no. " + value + " is null.", removed);
-      // tests the order of the iterator:
-      assertEquals(removed.intValue(), value);
-      value--;
-    }
-
-    ringBuffer.clear();
-    assertEquals(0, ringBuffer.size());
-    value = 0;
-    System.out.println("Adding 1 element to a buffer of size 10");
-    for (int i = 0; i < 1; i++) {
-      ringBuffer.add(new Integer(i));
-    }
-    assertEquals(1, ringBuffer.size());
-    it = ringBuffer.iteratorF2L();
-    while (it.hasNext()) {
-      removed = (Integer) it.next();
-      assertNotNull("Element no. " + value + " is null.", removed);
-      // tests the order of the iterator:
-      assertEquals(removed.intValue(), value);
-      value--;
-    }
-
-    ringBuffer.clear();
-    assertEquals(0, ringBuffer.size());
-    value = 9;
-    System.out.println("Adding 10 elements to a buffer of size 10");
-    for (int i = 0; i < 10; i++) {
-      ringBuffer.add(new Integer(i));
-    }
-    assertEquals(10, ringBuffer.size());
-    it = ringBuffer.iteratorF2L();
-    while (it.hasNext()) {
-      removed = (Integer) it.next();
-      assertNotNull("Element no. " + value + " is null.", removed);
-      // tests the order of the iterator:
-      assertEquals(removed.intValue(), value);
-      value--;
-    }
-
-    ringBuffer.clear();
-    assertEquals(0, ringBuffer.size());
-    value = 11;
-    System.out.println("Adding 12 elements to a buffer of size 10");
-    for (int i = 0; i < 12; i++) {
-      ringBuffer.add(new Integer(i));
-    }
-    assertEquals(10, ringBuffer.size());
-    it = ringBuffer.iteratorF2L();
-    while (it.hasNext()) {
-      removed = (Integer) it.next();
-      assertNotNull("Element no. " + value + " is null.", removed);
-      // tests the order of the iterator:
-      assertEquals(removed.intValue(), value);
-      value--;
-    }
-
-    System.out.println("Testing for side effects of hasNext()...");
-    it = ringBuffer.iteratorF2L();
-    for (int i = 0; i < 100; i++) {
-      assertTrue(it.hasNext());
-    }
-
-    System.out.println("Testing hasNext() with iterator f2l on empty buffer...");
-    ringBuffer.clear();
-    assertEquals(0, ringBuffer.size());
-    assertTrue(ringBuffer.isEmpty());
-    it = ringBuffer.iteratorF2L();
-    assertFalse(it.hasNext());
-
-    System.out.println("Testing hasNext() with iterator l2f on empty buffer...");
-    ringBuffer.clear();
-    assertEquals(0, ringBuffer.size());
-    assertTrue(ringBuffer.isEmpty());
-    it = ringBuffer.iteratorL2F();
-    assertFalse(it.hasNext());
-  }
-
-  /**
-   * Test method for
-   * {@link info.monitorenter.util.collections.RingBufferArrayFast#setBufferSize(int)}.
-   * <p>
-   * 
-   */
-  public void testSetBufferSize() {
-    IRingBuffer buffer = new RingBufferArrayFast(3);
-    assertEquals(3, buffer.getBufferSize());
-    for (int i = 0; i < 3; i++) {
-      buffer.add(new Integer(i));
-    }
-    assertEquals(3, buffer.size());
-    System.out.println("before setting size from 3 to 4: " + buffer.toString());
-    buffer.setBufferSize(4);
-    System.out.println("after setting size from 3 to 4: " + buffer.toString());
-    assertEquals(3, buffer.size());
-    assertEquals(4, buffer.getBufferSize());
-
-    buffer.setBufferSize(2);
-    assertEquals(2, buffer.size());
-    assertEquals(2, buffer.getBufferSize());
-    Iterator it = buffer.iteratorL2F();
-    assertEquals(1, ((Integer) it.next()).intValue());
-    assertEquals(2, ((Integer) it.next()).intValue());
-    assertFalse(it.hasNext());
 
   }
 
